<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectUserTypeActivity">

    <ImageView
        android:id="@+id/imageProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/loginTitle"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:src="@drawable/profile"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/radioGroup"
        android:layout_centerHorizontal="true"
        android:text="@string/selection_label"
        android:textColor="@color/blue"
        android:textSize="40sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp">

        <RadioButton
            android:id="@+id/client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:checked="true"
            android:text="@string/client" />

        <RadioButton
            android:id="@+id/rider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/rider" />

        <RadioButton
            android:id="@+id/manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/manager" />

    </RadioGroup>

    <TextView
        android:id="@+id/hasAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroup"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:text="@string/has_account" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hasAccount"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/confirm_button" />

</RelativeLayout>