<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rider.RiderDeliveryActivity">

    <TextView
        android:id="@+id/dateDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/delivery_date"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/locationDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateDelivery"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/delivery_location"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/deliveryTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationDelivery"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/delivery_total_payment"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/deliveryPaymentType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/deliveryTotalPrice"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/delivery_payment_type"
        android:textColor="@color/black"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/deliveryPaymentType"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="State:"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/shareLocationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/share_location"
        tools:ignore="ContentDescription,RelativeOverlap,SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/startDeliveryBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/state"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/start_delivery"
        app:icon="@drawable/notification_icon" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/deliveryMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/startDeliveryBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/view_map_order"
        app:icon="@drawable/location" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/riderChatClientBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/deliveryMap"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/client"
        app:icon="@drawable/message"
        tools:ignore="RelativeOverlap" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/riderChatManagerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/riderChatClientBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/manager"
        app:icon="@drawable/message"
        tools:ignore="RelativeOverlap" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/endDeliverySuccessBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/riderChatManagerBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/delivery_success"
        android:textAlignment="center"
        app:icon="@drawable/notification_icon" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/endDeliveryFailureBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/endDeliverySuccessBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/delivery_failure"
        android:textAlignment="center"
        app:icon="@drawable/notification_icon" />


</RelativeLayout>