<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rider.RiderProfileActivity">
    <TextView
        android:id="@+id/welcomeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:text="@string/welcome"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/profileLabel"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/profile"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/profileLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/emailLayout"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/profile_label"
        android:textColor="@color/blue"
        android:textSize="40sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/riderEmail"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/email_hint"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/riderStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailLayout"
        android:layout_centerHorizontal="true"
        android:text="@string/rider_status" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/homepageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/riderStatus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/homepage"
        app:icon="@drawable/home" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/currentDeliveryBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/homepageBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/current_delivery"
        app:icon="@drawable/notification_icon" />

</RelativeLayout>