<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".client.ClientProfileActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/profileLabel"
        android:layout_margin="10dp"
        android:src="@drawable/profile"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/profileLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/emailLayout"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/profile_label"
        android:textColor="@color/blue"
        android:textSize="40sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/locationLayout"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userEmail"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/email_hint"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/locationLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/location"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:hint="@string/location_hint"
            android:imeOptions="actionDone"
            android:inputType="textPostalAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/setLocationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:focusable="false"
        android:text="@string/is_location_correct"
        app:icon="@drawable/location" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/homepageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setLocationBtn"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/homepage"
        app:icon="@drawable/home" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/chatWithRiderBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/homepageButton"
        android:layout_centerHorizontal="true"
        android:text="@string/rider"
        app:icon="@drawable/message" />

</RelativeLayout>